# snort3-ai-ops

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  api_server.py  autonomous_setup.py  demo_autonomous_dependencies.py  demo_readme_walkthrough.sh  docker-compose.test.yaml  docker-compose.yml  main.py  pytest.ini  requirements-dev.txt  requirements.txt  run_integration_test.sh  setup.sh  test_autonomous_features.sh  test_autonomous_setup.py  test_snort3_integration.sh  verify_persistent_agent.sh
agents/: README.md  __init__.py  behavioral_analysis_agent.py  report_generation_agent.py  response_orchestrator_agent.py  rule_optimization_agent.py  setup_agent.py  threat_intelligence_agent.py
config/: config.example.yaml  prometheus.yml  snort.lua
connectors/: __init__.py  snort3_event_stream.py
core/: __init__.py  config.py  engine.py
docker/: Dockerfile  init-db.sql
docs/: ACTUAL_DEPLOYMENT_SUMMARY.md  AUTONOMOUS_AGENT_FAQ.md  PERSISTENT_AGENT_IMPLEMENTATION.md  PRODUCTION_RUNBOOK.md  SNORT3_INTEGRATION_TEST.md  demo_persistent_behavior.py
examples/: agent_monitor.py  apt_detection_demo.py  example1_basic_monitoring.py  example2_custom_workflow.py  example3_interactive_investigation.py  example4_scheduled_reporting.py  example5_api_integration.py  live_processing_demo.py
integrations/: __init__.py  firewall_connectors.py  siem_connectors.py
models/: .gitkeep
pcaps/: .gitkeep
reports/: .gitkeep  status_report.html  test_status.html
scripts/: install_snort3.sh  (+1 more)
snort3-plugins/event_exporter/: CMakeLists.txt  ai_event_exporter.cc  ai_event_exporter.h
(+21 files in other folders)
